grammar.js
    source_file: $ => seq(
      optional($.shebang_line),
      repeat($.file_annotation),
      optional($.package_header),
      repeat($.import_list),
      repeat(seq($._statement, $._semi))
    ),

    class_declaration: $ => prec.right(choice(
      seq(
        optional(field('modifiers', $.modifiers)),
        field('kind', choice("class", "interface")),
        field('name', alias($.simple_identifier, $.type_identifier)),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('primary_constructor', $.primary_constructor)),
        optional(seq(":", field('delegation_specifiers', $._delegation_specifiers))),
        optional(field('constraints', $.type_constraints)),
        optional(field('body', $.class_body))
      ),
      seq(
        optional(field('modifiers', $.modifiers)),
        field('kind', "enum"), "class",
        field('name', alias($.simple_identifier, $.type_identifier)),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('primary_constructor', $.primary_constructor)),
        optional(seq(":", field('delegation_specifiers', $._delegation_specifiers))),
        optional(field('constraints', $.type_constraints)),
        optional(field('body', $.enum_class_body))
      )
    )),

    primary_constructor: $ => seq(
      optional(seq(optional(field('modifiers', $.modifiers)), "constructor")),
      field('parameters', $._class_parameters)
    ),

    class_body: $ => seq("{", optional($._class_member_declarations), "}"),

    _class_parameters: $ => seq(
      "(",
      optional(sep1($.class_parameter, ",")),
      optional(","),
      ")"
    ),

    class_parameter: $ => seq(
      optional($.modifiers),
      optional(choice("val", "var")),
      $.simple_identifier,
      ":",
      $._type,
      optional(seq("=", $._expression))
    ),

    _delegation_specifiers: $ => prec.left(sep1(
      $.delegation_specifier,
      // $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
      ","
    )),

    delegation_specifier: $ => prec.left(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type
    )),

    constructor_invocation: $ => seq($.user_type, $.value_arguments),

    type_parameters: $ => seq("<", sep1($.type_parameter, ","), ">"),

    type_parameter: $ => seq(
      optional($.type_parameter_modifiers),
      alias($.simple_identifier, $.type_identifier),
      optional(seq(":", $._type))
    ),

    _class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semi)),

    anonymous_initializer: $ => seq("init", field('body', $._block)),

    companion_object: $ => seq(
      optional(field('modifiers', $.modifiers)),
      "companion",
      "object",
      optional(field('name', alias($.simple_identifier, $.type_identifier))),
      optional(seq(":", field('delegation_specifiers', $._delegation_specifiers))),
      optional(field('body', $.class_body))
    ),

    function_value_parameters: $ => seq(
      "(",
      optional(sep1($._function_value_parameter, ",")),
      optional(","),
      ")"
    ),

    _function_value_parameter: $ => seq(
      optional($.parameter_modifiers),
      $.parameter,
      optional(seq("=", $._expression))
    ),

    _receiver_type: $ => seq(
      optional($.type_modifiers),
      choice (
        $._type_reference,
        $.parenthesized_type,
        $.nullable_type
      )
    ),

    function_declaration: $ => prec.right(seq( // TODO
      optional(field('modifiers', $.modifiers)),
      "fun",
      optional(field('type_parameters', $.type_parameters)),
      optional(seq(field('receiver', $._receiver_type), optional('.'))),
      field('name', $.simple_identifier),
      field('parameters', $.function_value_parameters),
      optional(seq(":", field('return_type', $._type))),
      optional(field('constraints', $.type_constraints)),
      optional(field('body', $.function_body))
    )),

    function_body: $ => choice($._block, seq("=", $._expression)),

    variable_declaration: $ => prec.left(PREC.VAR_DECL, seq(
      // repeat($.annotation), TODO
      $.simple_identifier,
      optional(seq(":", $._type))
    )),

    property_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      field('kind', choice("val", "var")),
      optional(field('type_parameters', $.type_parameters)),
      optional(seq(field('receiver', $._receiver_type), optional('.'))),
      choice(field('variable', $.variable_declaration), field('variables', $.multi_variable_declaration)),
      optional(field('constraints', $.type_constraints)),
      optional(choice(
        seq("=", field('expression', $._expression)),
        field('delegate', $.property_delegate)
      )),
      optional(';'),
      choice(
        // TODO: Getter-setter combinations
        optional(field('getter', $.getter)),
        optional(field('setter', $.setter))
      )
    )),

    getter: $ => prec.right(seq(
      optional($.modifiers),
      "get",
      optional(seq(
        "(", ")",
        optional(seq(":", $._type)),
        $.function_body
      ))
    )),

    object_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      "object",
      field('name', alias($.simple_identifier, $.type_identifier)),
      optional(seq(":", field('delegation_specifiers', $._delegation_specifiers))),
      optional(field('body', $.class_body))
    )),

    secondary_constructor: $ => seq(
      optional(field('modifiers', $.modifiers)),
      "constructor",
      field('parameters', $.function_value_parameters),
      optional(seq(":", field('delegation', $.constructor_delegation_call))),
      optional(field('body', $._block))
    ),

    constructor_delegation_call: $ => seq(choice("this", "super"), $.value_arguments),

    // ==========
    // Enum classes
    // ==========

    enum_class_body: $ => seq(
      "{",
      optional($._enum_entries),
      optional(seq(";", optional($._class_member_declarations))),
      "}"
    ),

    _enum_entries: $ => seq(sep1($.enum_entry, ","), optional(",")),

    enum_entry: $ => seq(
      optional($.modifiers),
      $.simple_identifier,
      optional($.value_arguments),
      optional($.class_body)
    ),

    // ==========
    // Types
    // ==========

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.function_type,
        $.not_nullable_type
      )
    ),

    _type_reference: $ => prec.left(1, choice(
      $.user_type,
      "dynamic"
    )),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1($._quest)
    ),

    _quest: $ => "?",

    // TODO: Figure out a better solution than right associativity
    //       to prevent nested types from being recognized as
    //       unary expresions with navigation suffixes.

    user_type: $ => sep1($._simple_user_type, "."),

    _simple_user_type: $ => prec.right(PREC.SIMPLE_USER_TYPE, seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    )),

    statements: $ => seq(
      $._statement,
      repeat(seq($._semi, $._statement)),
      optional($._semi),
    ),

    _statement: $ => choice(
      $._declaration,
      seq(
        repeat(choice($.label, $.annotation)),
        choice(
          $.assignment,
          $._loop_statement,
          $._expression
        )
      )
    ),

    _block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

    _semi: $ => $._automatic_semicolon,

    _expression: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression
    ),

    // Unary expressions

    call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

    navigation_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.navigation_suffix)),

    additive_expression: $ => prec.left(PREC.ADDITIVE, seq($._expression, $._additive_operator, $._expression)),

    navigation_suffix: $ => seq(
      $._member_access_operator,
      choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      )
    ),

    call_suffix: $ => prec.left(seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional($.type_arguments),
      choice(
        seq(optional($.value_arguments), $.annotated_lambda),
        $.value_arguments
      )
    )),

    value_arguments: $ => seq(
      "(",
      optional(
        seq(
          sep1($.value_argument, ","),
          optional(","),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($.annotation),
      optional(seq($.simple_identifier, "=")),
      optional("*"),
      $._expression
    ),

    string_literal: $ => seq(
      $._string_start,
      repeat(choice($.string_content, $._interpolation)),
      $._string_end,
    ),

    _interpolation: $ => choice(
      seq("${", alias($._expression, $.interpolated_expression), "}"),
      seq("$", alias($.simple_identifier, $.interpolated_identifier))
    ),

    _additive_operator: $ => choice("+", "-"),

    _member_access_operator: $ => choice(".", "::", alias($.safe_nav, '?.')),

    modifiers: $ => prec.left(repeat1(choice($.annotation, $._modifier))),

    _modifier: $ => choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ),

    class_modifier: $ => choice(
      "sealed",
      "annotation",
      "data",
      "inner",
      "value",
    ),

    member_modifier: $ => choice(
      "override",
      "lateinit"
    ),

    visibility_modifier: $ => choice(
      "public",
      "private",
      "internal",
      "protected"
    ),

    function_modifier: $ => choice(
      "tailrec",
      "operator",
      "infix",
      "inline",
      "external",
      "suspend"
    ),

    inheritance_modifier: $ => choice(
      "abstract",
      "final",
      "open"
    ),

    annotation: $ => choice(
      $._single_annotation,
      $._multi_annotation
    ),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    simple_identifier: $ => choice(
      $._lexical_identifier,
      "expect",
      "data",
      "inner",
      "value",
      "actual",
      "set",
      "get"
      // TODO: More soft keywords
    ),

    integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

    hex_literal: $ => token(seq("0", /[xX]/, HEX_DIGITS)),

    _lexical_identifier: $ => choice(
      $._alpha_identifier,
      $._backtick_identifier,
    ),
